--- a/CheckersGUI/Components/FieldGUI.xaml
+++ b/CheckersGUI/Components/FieldGUI.xaml
@@ -7,8 +7,11 @@
              mc:Ignorable="d"
              d:DesignHeight="80" d:DesignWidth="80">
     <Border x:Name="border" d:Background="White" BorderBrush="Black" BorderThickness="2" Width="80" Height="80">
-        <Border d:Background="Black" Background="{Binding PieceColor}" Width="40" Height="40" CornerRadius="20">
-            <Button Background="Transparent" BorderBrush="Transparent" Click="Button_Click"/>
-        </Border>
+        <Canvas Width="80" Height="80">
+            <Border Canvas.Top="30" Canvas.Left="30" Panel.ZIndex="1" d:Background="Yellow" Background="{Binding PieceColorQueen}" Width="20" Height="20" CornerRadius="20"/>
+            <Border Canvas.Left="20" Canvas.Top="20" d:Background="Black" Background="{Binding PieceColor}" Width="40" Height="40" CornerRadius="20">
+                <Button Background="Transparent" BorderBrush="Transparent" Click="Button_Click"/>
+            </Border>
+        </Canvas>
     </Border>
 </UserControl>
