--- a/CheckersGUI/MainWindow.xaml
+++ b/CheckersGUI/MainWindow.xaml
@@ -7,29 +7,38 @@
         mc:Ignorable="d"
         Background="Gray"
         Title="MainWindow" Height="900" Width="1600">
-    <Grid x:Name="Board" Height="800" Width="640" Background="SaddleBrown">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="80"/>
-            <ColumnDefinition Width="80"/>
-            <ColumnDefinition Width="80"/>
-            <ColumnDefinition Width="80"/>
-            <ColumnDefinition Width="80"/>
-            <ColumnDefinition Width="80"/>
-            <ColumnDefinition Width="80"/>
-            <ColumnDefinition Width="80"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="80"/>
-            <RowDefinition Height="80"/>
-            <RowDefinition Height="80"/>
-            <RowDefinition Height="80"/>
-            <RowDefinition Height="80"/>
-            <RowDefinition Height="80"/>
-            <RowDefinition Height="80"/>
-            <RowDefinition Height="80"/>
-            <RowDefinition Height="80"/>
-            <RowDefinition Height="80"/>
-        </Grid.RowDefinitions>
-        <Button Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="8"  Width="300" Height="30" Content="Click me" Click="Button_Click" Background="White"/>
-    </Grid>
+    <Canvas>
+        <Grid Canvas.Left="480" Canvas.Top="90" x:Name="Board" Height="720" Width="640" Background="SaddleBrown">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="80"/>
+                <ColumnDefinition Width="80"/>
+                <ColumnDefinition Width="80"/>
+                <ColumnDefinition Width="80"/>
+                <ColumnDefinition Width="80"/>
+                <ColumnDefinition Width="80"/>
+                <ColumnDefinition Width="80"/>
+                <ColumnDefinition Width="80"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="80"/>
+            </Grid.RowDefinitions>
+            <Button Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="8"  Width="300" Height="30" Content="Click me" Click="Button_Click" Background="White"/>
+        </Grid>
+        <StackPanel Width="150" Canvas.Left="20" Canvas.Top="400">
+            <Label Content="Black level"/>
+            <TextBox x:Name="txbBlack" Text="5"/>
+        </StackPanel>
+        <StackPanel Width="150" Canvas.Left="20" Canvas.Top="450">
+            <Label Content="White level"/>
+            <TextBox x:Name="txbWhite" Text="5"/>
+        </StackPanel>
+    </Canvas>
 </Window>
