--- a/CheckersGUI/MainWindow.xaml
+++ b/CheckersGUI/MainWindow.xaml
@@ -30,7 +30,7 @@
                 <RowDefinition Height="80"/>
                 <RowDefinition Height="80"/>
             </Grid.RowDefinitions>
-            <Button Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="8"  Width="300" Height="30" Content="Click me" Click="Button_Click" Background="White"/>
+            <Button Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="8"  Width="300" Height="30" Content="Start Game" Click="Button_Click" Background="White"/>
         </Grid>
         <StackPanel Width="150" Canvas.Left="20" Canvas.Top="400">
             <Label Content="Black level"/>
