Changes and improvements. Winner annoucment for GUI. Possibility to make game a draw. Fix: Choose the longest attack.

--- a/CheckersGUI/MainWindow.xaml
+++ b/CheckersGUI/MainWindow.xaml
@@ -40,5 +40,13 @@
             <Label Content="White level"/>
             <TextBox x:Name="txbWhite" Text="5"/>
         </StackPanel>
+        <Label Content="{Binding WinnerLabelContent}" 
+               HorizontalContentAlignment="Center" 
+               Panel.ZIndex="1" 
+               Canvas.Left="560" Canvas.Top="372" 
+               d:Content="You Have Won The Game" 
+               FontSize="30" FontStyle="Italic" FontWeight="Bold"
+               Foreground="Green"
+               Width="480" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </Window>
