--- a/CheckersGUI/Components/Analytics.xaml
+++ b/CheckersGUI/Components/Analytics.xaml
@@ -5,9 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CheckersGUI.Components"
              mc:Ignorable="d" 
-             d:DesignHeight="100" d:DesignWidth="200">
+             d:DesignHeight="115" d:DesignWidth="200">
     <StackPanel>
-        <Label Content="{Binding Label}" d:Content="{Binding Label}"/>
+        <Label HorizontalContentAlignment="Center" FontWeight="Bold" Content="{Binding Label}" d:Content="{Binding Label}"/>
         <StackPanel Orientation="Horizontal">
             <Label Content="Avg. Time: " HorizontalContentAlignment="Center"/>
             <Label d:Content="26123" Content="{Binding AverageTime}" HorizontalContentAlignment="Center"/>
@@ -15,6 +15,10 @@
         <StackPanel Orientation="Horizontal">
             <Label Content="Nodes: " HorizontalContentAlignment="Center"/>
             <Label d:Content="26123" Content="{Binding Nodes}" HorizontalContentAlignment="Center"/>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal">
+            <Label Content="Average Nodes: " HorizontalContentAlignment="Center"/>
+            <Label d:Content="26123" Content="{Binding AverageNodes}" HorizontalContentAlignment="Center"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
             <Label Content="Moves: " HorizontalContentAlignment="Center"/>
