--- a/CheckersGUI/MainWindow.xaml
+++ b/CheckersGUI/MainWindow.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         Icon="checkers.ico"
         Background="Gray"
-        Title="MainWindow" Height="900" Width="1600">
+        Title="Checkers" Height="900" Width="1600">
     <Window.Resources>
         <Style TargetType="Button">
 
@@ -70,7 +70,7 @@
         <StackPanel Canvas.Right="20" Canvas.Top="20" Visibility="{Binding BlackVisibility}">
             <component:Analytics x:Name="anBlack" Label="Black"/>
         </StackPanel>
-        <StackPanel Canvas.Right="20" Canvas.Top="120" Visibility="{Binding WhiteVisibility}">
+        <StackPanel Canvas.Right="20" Canvas.Top="160" Visibility="{Binding WhiteVisibility}">
             <component:Analytics x:Name="anWhite" Label="White"/>
         </StackPanel>
     </Canvas>
